--- a/Final Project/views/ShowCaseBase.html
+++ b/Final Project/views/ShowCaseBase.html
@@ -24,7 +24,7 @@
         <!-- <div class="container">
              <input type="text" class="form-control" placeholder="Search...">
          </div>-->
-        <a class="navbar-brand" href="home.html"><img src="../images/logo.jpg" alt="Logo" style="height: 90px;"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../images/logo.jpg" alt="Logo" style="height: 90px;"></a>
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark navbar-bg">
         <div class="container">
@@ -34,7 +34,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="KeychronQ3.html">Showcase</a></li>
                     <li class="nav-item"><a class="nav-link" href="accessories.html">Accessories</a></li>
