--- a/Final Project/views/about.html
+++ b/Final Project/views/about.html
@@ -19,7 +19,7 @@
 <!-- Search Bar Section -->
 <div class="search-bar-bg">
     <div class="container d-flex align-items-center">
-        <a class="navbar-brand" href="home.html"><img src="../images/CWEB%20LOGO.png" alt="Logo" style="height: 90px;"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../images/CWEB%20LOGO.png" alt="Logo" style="height: 90px;"></a>
         <span class="ml-3 text-white">DTBR Keyboards</span>
     </div>
 </div>
@@ -33,7 +33,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navBarNavAltMarkup">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="KeychronQ3.html">Showcase</a></li>
                 <li class="nav-item"><a class="nav-link" href="accessories.html">Accessories</a></li>
@@ -51,7 +51,7 @@
     <!-- Breadcrumb Section -->
     <!--<nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="home.html">Home</a></li>
+            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
             <li class="breadcrumb-item active" aria-current="page">About Us</li>
         </ol>
     </nav>-->
