--- a/Final Project/views/FAQPage.html
+++ b/Final Project/views/FAQPage.html
@@ -22,7 +22,7 @@
 <body>
     <div class="search-bar-bg">
         <div class="container d-flex align-items-center">
-            <a class="navbar-brand" href="../index.html"><img src="../images/CWEB%20LOGO.png" alt="Logo" style="height: 90px;"></a>
+            <a class="navbar-brand" href="../../index.html"><img src="../images/CWEB%20LOGO.png" alt="Logo" style="height: 90px;"></a>
             <span class="ml-3 text-white">DTBR Keyboards</span>
         </div>
     </div>
@@ -34,7 +34,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navBarNavAltMarkup">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../../index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="KeychronQ3.html">Showcase</a></li>
                     <li class="nav-item"><a class="nav-link" href="accessories.html">Accessories</a></li>
