--- a/Final Project/views/form.html
+++ b/Final Project/views/form.html
@@ -18,7 +18,7 @@
 <div class="form-container">
     <img src="../images/CWEB%20LOGO.png" alt="Logo" class="logo">
     <h2>Registry Form</h2>
-    <form action="../index.html">
+    <form action="../../index.html">
         <div class="form-group">
             <label for="firstName">First Name <span class="required">*</span></label>
             <input type="text" class="form-control" id="firstName" placeholder="Enter your first name" required>
